--- a/stylesheet.css
+++ b/stylesheet.css
@@ -413,3 +413,22 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 img {
     pointer-events: none;
 }
+
+.video-responsive {
+  position: relative;
+  display: block;
+}
+
+.video-responsive::before {
+  display: block;
+  content: "";
+}
+
+.video-responsive-item {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  border: 0;
+}
+
