--- a/stylesheet.css
+++ b/stylesheet.css
@@ -414,3 +414,13 @@ img {
     pointer-events: none;
 }
 
+#credit {
+    width: 4.5vw;
+}
+
+@media screen and (max-width: 700px) {
+    #credit {
+        width: 13vw;
+    }
+}
+
