--- a/stylesheet.css
+++ b/stylesheet.css
@@ -922,20 +922,23 @@ nav {
         /* display: none; */
     }
     .hero-desktop {
-        background-position: 40% 50%;
+        background-position: 46% 50%;
     }
     .hero-image-mobile {
         /* display: block; */
         width:100%;
     }
     .outer {
-        height: calc( (100vw * 5)/4);
+        /* height: calc( (100vw * 5)/4); */
+        height: 600px;
     }
     .outer h1{
-        margin-top: 173px; 
+        /* margin-top: 173px;  */
+        margin-top:237px;
     }
     .inner {
-        height: calc( (100vw * 5)/4);
+        /* height: calc( (100vw * 5)/4); */
+        height: 600px;
     }
     .layer {
         /* background-color: rgba(53, 53, 53, 0.137); */
