--- a/stylesheet.css
+++ b/stylesheet.css
@@ -929,16 +929,16 @@ nav {
         width:100%;
     }
     .outer {
-        /* height: calc( (100vw * 5)/4); */
-        height: 600px;
+        height: calc( (100vw * 5)/4);
+/*         height: 600px; */
     }
     .outer h1{
-        /* margin-top: 173px;  */
-        margin-top:237px;
+        margin-top: 173px; 
+/*         margin-top:237px; */
     }
     .inner {
-        /* height: calc( (100vw * 5)/4); */
-        height: 600px;
+        height: calc( (100vw * 5)/4);
+/*         height: 600px; */
     }
     .layer {
         /* background-color: rgba(53, 53, 53, 0.137); */
